--- a/src/views/plantillaInfo.ejs
+++ b/src/views/plantillaInfo.ejs
@@ -9,7 +9,7 @@
 <body>
     <table>
         <tr>
-            <th>Puerto</th><th>Plataforma</th><th>versionNode</th><th>memoriaTotalReservada</th><th>pathExec</th><th>processId</th><th>capetaProyecto</th>
+            <th>Puerto</th><th>Plataforma</th><th>versionNode</th><th>memoriaTotalReservada</th><th>pathExec</th><th>processId</th><th>capetaProyecto</th><th>CantCpus</th>
         </tr>
         <tr>
             <td><%= info.puerto %> </td>
@@ -19,6 +19,7 @@
             <td><%= info.pathExec %> </td>
             <td><%= info.processId %> </td>
             <td><%= info.capetaProyecto %> </td>
+            <td><%= info.cantCpus %> </td>
         </tr>
     </table>
         
